--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,75 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+    --main-color: #D6BD98;
+    --white-color: #1c1c1c;
+    --text-color: #77777;
+    --bg-navbar: #677D6A;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+    background-color: var(--main-color);
+    font: var(--text-color);
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    position: relative;
+}
+html {
+    font-family: system-ui;
+    font: var(--text-color);
+    font-size: 16;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+/* Navbar */
+.navbar {
+    background-color: var(--bg-navbar);
 }
 
-.card {
-  padding: 2em;
+/* container wrapper for content*/
+
+.container_content {
+    position: relative;
+    top: 72px;
+    width: 100%;
+    height: calc(100vh - 72px);
+
 }
 
-.read-the-docs {
-  color: #888;
+
+/* post adding */
+.wrapper__post__adding {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 200;
 }
+
+.wrapper__post__adding .post__adding {
+    width: 100%;
+    min-width: 500px;
+    padding: 20px;
+    background-color: var(--white-color);
+    background-color: var(--white-color);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+}
+
+.wrapper__post__adding .adding__post__form {
+    min-width: calc(500px - 30px);
+    min-height: 300px;
+}
+
+.wrapper__post__adding input,
+.wrapper__post__adding textarea{
+    background-color: var(--white-color);
+}
+
+
+
